[package]
name = "heinzelmann"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.23.0"
bytes = "1.5.0"
#steel-core = "0.5.0"
steel-core = { git = "https://github.com/mattwparas/steel.git" }
steel-derive = "0.4.0"
timer = "0.2.0"
chrono = "0.4.31"
rand = "0.8.5"
md5 = "0.7.0"
hex = "0.4.3"
